[tool.poetry]
name = "reinforcement-learning"
version = "0.1.0"
description = ""
authors = ["RyotaBannai <ryotala0528@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
ray = { extras = ["data", "serve", "train", "tune"], version = "^2.49.2" }
numpy = "^2.3.3"
gymnasium = {extras = ["classic-control", "mujoco"], version = "^1.2.1"}
torch = "^2.8.0"
ipdb = "^0.13.13"
matplotlib = "^3.10.6"
isort = "^6.1.0"
dm-tree = "^0.1.9"
scipy = "^1.16.2"
lz4 = "^4.4.4"
autorom = {extras = ["accept-rom-license"], version = "^0.6.1"}
swig = "^4.3.1.post0"
py-spy = "^0.4.1"
seaborn = "^0.13.2"
tensorboard = "^2.20.0"
torch-tb-profiler = "^0.4.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
